--- a/platforms/ios/www/css/index.css
+++ b/platforms/ios/www/css/index.css
@@ -37,7 +37,7 @@ body {
     );
     background-attachment:fixed;
     font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
-    font-size:12px;
+    font-size:1.2vh;
     height:100%;
     margin:0px;
     padding:0px;
@@ -71,7 +71,7 @@ body {
 }
 
 h1 {
-    font-size:24px;
+    font-size:2.4vh;
     font-weight:normal;
     margin:0px;
     overflow:visible;
@@ -83,7 +83,7 @@ h1 {
     border-radius:4px;
     -webkit-border-radius:4px;
     color:#FFFFFF;
-    font-size:12px;
+    font-size:1.2vh;
     margin:0px 30px;
     padding:2px 0px;
 }
