--- a/Pootle-android/res/layout/languagespage.xml
+++ b/Pootle-android/res/layout/languagespage.xml
@@ -6,7 +6,8 @@
               android:layout_height="match_parent"
               android:weightSum="1"
               android:baselineAligned="false"
-              android:background="#ffd8d8d8">
+              android:background="#ffd8d8d8"
+          >
 
         <TextView
                 android:layout_width="match_parent"
